name: hasencrypt
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: me@sam.st
synopsis: A simple ACME (i.e. Let's Encrypt) client.
description:
    A simple ACME (i.e. Let's Encrypt) client.
category: Network
author: sam

executable hasencrypt
    main-is: Main.hs
    build-depends:
        aeson >=0.11.2.0,
        asn1-encoding >=0.9.4,
        asn1-types >=0.3.2,
        base >=4.8 && <4.9,
        base64-bytestring >=1.0.0.1,
        bytestring >=0.10.6.0,
        cryptonite >=0.16,
        crypto-pubkey-types >=0.4.3,
        exceptions >=0.8.2.1,
        filepath >=1.4.0.0,
        http-client >=0.4.28,
        http-types >=0.9.1,
        lens >=4.14,
        lens-aeson >=1.0.0.5,
        memory >=0.13,
        monad-loops >=0.4.3,
        mtl >=2.2.1,
        pem >=0.2.2,
        pkcs10 >=0.1.1.0,
        safe >=0.3.9,
        text >=1.2.2.1,
        transformers >=0.4.2.0,
        unordered-containers >=0.2.7.1,
        wreq >=0.4.1.0,
        x509 >=1.6.3
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

