name: hasencrypt
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: me@sam.st
synopsis: A simple ACME (i.e. Let's Encrypt) client.
description:
    A simple ACME (i.e. Let's Encrypt) client.
category: Network
author: sam

executable hasencrypt
    main-is: Main.hs
    other-modules:
        ACME
        Base64
        FlatJWS
        PKCS1
        Utils
    build-depends:
        aeson,
        asn1-encoding,
        asn1-types,
        base,
        base64-bytestring,
        bytestring,
        cryptonite,
        directory,
        exceptions,
        filepath,
        hourglass,
        http-client,
        http-types,
        lens,
        lens-aeson,
        memory,
        monad-loops ,
        mtl,
        pem,
        pkcs10,
        safe,
        text,
        transformers,
        unordered-containers,
        wreq,
        x509,
        x509-store
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
