name: hasencrypt
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: me@sam.st
synopsis: A simple ACME (i.e. Let's Encrypt) client.
description:
    A simple ACME (i.e. Let's Encrypt) client.
category: Network
author: sam

executable hasencrypt
    main-is: Main.hs
    build-depends:
        aeson -any,
        asn1-encoding -any,
        asn1-types -any,
        base -any,
        base64-bytestring -any,
        bytestring -any,
        cryptonite -any,
        directory -any,
        exceptions -any,
        filepath -any,
        hourglass -any,
        http-client -any,
        http-types -any,
        lens -any,
        lens-aeson -any,
        memory -any,
        monad-loops -any,
        mtl -any,
        pem -any,
        pkcs10 -any,
        safe -any,
        text -any,
        transformers -any,
        unordered-containers -any,
        wreq -any,
        x509 -any,
        x509-store -any,
        jose -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        ACME
        PKCS1
        Utils
        Types
    ghc-options: -Wall
